Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </center>
          </section>
 
-         <section>
+         <section id="october">
             <h3>October!</h3>
             <center>
             <figure>
@@ -133,3 +133,4 @@
         <script src="./javascript.js"></script>
     </body>
 </html>
+
